--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor-community/media": "^6.0.0",
+    "@capacitor/android": "^6.1.2",
+    "@capacitor/cli": "^6.1.2",
+    "@capacitor/core": "^6.1.2",
+    "@capawesome-team/capacitor-android-foreground-service": "^6.0.1",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@ionic-native/media": "^5.36.0",
     "@mui/material": "^5.16.6",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "cordova-plugin-device": "^3.0.0",
+    "cordova-plugin-file": "^8.1.0",
+    "cordova-plugin-media": "^7.0.0",
     "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -24,6 +33,7 @@
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
+    "@types/cordova-plugin-media": "^0.0.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
@@ -34,7 +44,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "sass": "^1.77.8",
     "typescript": "^5.2.2",
-    "vite": "^5.3.4"
+    "vite": "5.4.6"
   },
   "eslintConfig": {
     "extends": "react-app",
