20241029 요청사항 개발 중

--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -9,9 +9,10 @@ android {
 
 apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
-    implementation project(':capacitor-community-media')
     implementation project(':capacitor-firebase-messaging')
     implementation project(':capacitor-app')
+    implementation project(':capacitor-preferences')
+    implementation project(':capacitor-push-notifications')
     implementation project(':capawesome-team-capacitor-android-foreground-service')
     implementation "androidx.webkit:webkit:1.4.0"
 }
