--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@capacitor-community/media": "^6.0.0",
     "@capacitor-firebase/messaging": "^6.2.0",
     "@capacitor/android": "^6.1.2",
     "@capacitor/app": "^6.0.1",
     "@capacitor/cli": "^6.1.2",
     "@capacitor/core": "^6.1.2",
+    "@capacitor/preferences": "^6.0.2",
+    "@capacitor/push-notifications": "^6.0.2",
     "@capawesome-team/capacitor-android-foreground-service": "^6.0.1",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
