--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "firebase": "^10.14.1",
     "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "recoil": "^0.7.7",
