--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@emotion/styled": "^11.13.0",
     "@ionic-native/media": "^5.36.0",
     "@mui/material": "^5.16.6",
-    "axios": "^1.7.2",
+    "axios": ">=1.8.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "cordova-plugin-device": "^3.0.0",
@@ -49,7 +49,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "sass": "^1.77.8",
     "typescript": "^5.2.2",
-    "vite": "5.4.6"
+    "vite": ">=5.4.12"
   },
   "eslintConfig": {
     "extends": "react-app",
